<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TasksActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation ="vertical">


        <TextView android:text="@string/name" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:focusable="true"
            style="?android:listSeparatorTextViewStyle"
            android:textColor="@android:color/holo_blue_light"/>



        <EditText android:id = "@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Form"
            style="?android:listSeparatorTextViewStyle"
            android:textColor="@android:color/holo_blue_light"/>

        <RadioGroup android:id="@+id/task_form"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton android:id="@+id/task_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/call"/>

            <RadioButton android:id="@+id/task_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/message"/>

            <RadioButton android:id="@+id/task_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            style="?android:listSeparatorTextViewStyle"
            android:textColor="@android:color/holo_blue_light"/>

        <EditText android:id = "@+id/task_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_contact"
            android:inputType="phone"
            android:background="@android:drawable/editbox_background" />

        <EditText android:id = "@+id/task_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_email"
            android:inputType="textEmailAddress"
            android:visibility="gone"
            android:background="@android:drawable/editbox_background" />

        <Button android:id="@+id/choose_existing_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/existing_contact"
            style="?android:attr/buttonBarButtonStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            style="?android:listSeparatorTextViewStyle"
            android:textColor="@android:color/holo_blue_light"/>


        <Button android:id="@+id/task_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_time"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            style="?android:listSeparatorTextViewStyle"
            android:textColor="@android:color/holo_blue_light"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:lines="10"
            android:maxLines="100"
            android:id="@+id/task_note"
            android:hint="@string/what_notes"
            android:gravity="top|start"
            android:layout_weight="2.14"

            style="@android:style/TextAppearance.DeviceDefault"
            android:background="@android:drawable/editbox_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button android:id="@+id/task_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/holo_blue_light" />

            <Button android:id="@+id/task_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/holo_red_light" />

            <Button android:id="@+id/task_click_to_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>